开发ing 添加商品价格历史分析界面

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,8 @@
         </activity>
         <activity android:name=".mvp.display.ItemDisplayActivity">
         </activity>
+        <activity android:name=".mvp.analysis.AnalysisActivity">
+        </activity>
     </application>
 
 </manifest>
