--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,8 +31,8 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
 
-
     compile project(':common')
+    compile 'com.github.PhilJay:MPAndroidChart:v3.0.2'
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.just.agentweb:agentweb:2.0.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
