--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/PaaAppTheme">
         <activity android:name=".mvp.main.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
