--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,10 +40,13 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
 
-    compile project(':common')
-    compile 'com.github.PhilJay:MPAndroidChart:v3.0.2'
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.just.agentweb:agentweb:2.0.1'
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
     testCompile 'junit:junit:4.12'
+    compile 'com.android.support.constraint:constraint-layout:1.0.2'
+
+    compile project(':common')
+
+    compile 'com.github.PhilJay:MPAndroidChart:v3.0.2'
+    compile 'com.google.android:flexbox:0.3.0'
 }
