首页 新增设置提醒价格和正常价格

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,8 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
 
+    testCompile "com.google.truth:truth:0.34"
+
     compile project(':common')
 
     compile 'com.github.PhilJay:MPAndroidChart:v3.0.2'
