--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'com.android.application'
 apply plugin: 'me.tatarka.retrolambda'
+apply plugin: 'com.jakewharton.hugo'
 apply plugin: 'realm-android'
 
 android {
@@ -50,4 +51,5 @@ dependencies {
     compile 'com.google.android:flexbox:0.3.0'
 
     compile 'com.github.SenhLinsh:lshapp-common:1.0.1'
+//    compile project(':common')
 }
