--- a/build.gradle
+++ b/build.gradle
@@ -3,12 +3,14 @@
 buildscript {
     repositories {
         jcenter()
+        mavenCentral()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:2.3.2'
 
         classpath 'me.tatarka:gradle-retrolambda:3.6.1'
         classpath "io.realm:realm-gradle-plugin:3.1.3" // Realm
+        classpath 'com.jakewharton.hugo:hugo-plugin:1.2.1' // Hugo
     }
 }
 
