--- a/build.gradle
+++ b/build.gradle
@@ -6,9 +6,9 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.2'
+        classpath 'com.android.tools.build:gradle:3.0.0'
 
-        classpath 'me.tatarka:gradle-retrolambda:3.6.1'
+//        classpath 'me.tatarka:gradle-retrolambda:3.6.1'
         classpath "io.realm:realm-gradle-plugin:3.1.3" // Realm
         classpath 'com.jakewharton.hugo:hugo-plugin:1.2.1' // Hugo
     }
